# UruManifest

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
cmodule/: CMakeLists.txt  module.cpp
test/: Garden.age  __init__.py  avatar.sdl  test_encryption.py  test_plasmoul.py  test_sdl.py
urumanifest/: __main__.py  assets.py  commit.py  config.py  constants.py  dependencies.py  dirtsand.py  encryption.py  github.py  manifest.py  moss.py  plasma_python.py  plasma_sdl.py  plasmoul.py  py2constants.py  py2tools.py  utils.py  working.py
